libtap-1.12.0 (2015-03-21):
--------------------------

1. Apply a patch from Perlbotics from Perlmonks to fix broken tests and to
make the output of libtap more similar to that of Test::More.

libtap-1.10.0 (2014-01-15):
--------------------------

1. Bump the version number beyond 1.03 so it will be easy to upgrade from
1.03 (nothing was changed in the code).

libtap-1.2.1 (2014-01-12):
--------------------------

1. Convert the build system to CMake. See INSTALL for installation
details.

2. Now generating a libtap.pc pkg-config file.

tap-1.03 (2010-08-16):
----------------------

1. Add the NEWS file (this file).

2. Incorporated some portability changes and fixes from the
CCAN ( http://ccan.ozlabs.org/ ) "tap" package.

tap-1.02 (2010-01-04):
----------------------

1. Add the COPYING file.

2. Now disabling the thread-safety by default (in order to have it add
-DLIBTAP_ENABLE_BROKEN_THREAD_SAFE .

3. Changed configure.in to configure.ac.

    -- Shlomi Fish , http://www.shlomifish.org/