@@ -1,3 +1,9 @@
+libtap-1.14.0 (2019-03-23):
+---------------------------
+
+1. Add a plan() function for compatibility with
+https://github.com/shlomif/libtap/tree/cmake .
+
 libtap-1.12.0 (2015-03-21):
 --------------------------
 
